testing contact form email with formspree.io and form styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="https://github.com/RossGoodliffe"><img src="images/github-64.png" alt="github logo"></a>
                 <a href="#"><img src="images/link1-64.png" alt="github logo"></a>
                 <a href="#"><img src="images/twitter-64.png" alt="github logo"></a>
-                <a href="#"><img src="images/email1-64.png" alt="github logo"></a>
+                <a href="mailto:rossgoodliffe@gmail.com"><img src="images/email1-64.png" alt="email me"></a>
             </div>
 
         </section>
@@ -62,8 +62,8 @@
         <section id="contact">
             <div class="contact-area">
                 <h1>Contact</h1>
-                    <form>
-                        <div class="contact-form">
+
+                    <form name="input" method="POST" action="https://formspree.io/rossgoodliffe@gmail.com">
                             <label>First Name</label>
                             <input type="text" name="fname" placeholder="First Name">
                             <label>Surname</label>
@@ -72,9 +72,9 @@
                             <input type="text" name="email" placeholder="Email">
                             <label>Message</label>
                             <input type="textarea" name="message" placeholder="Message">
-                            <input type="button" type="submit" value="Submit" name="">
-                        </div>
+                            <input class="contact-button" type="button" type="submit" value="Submit" name="">                    
                     </form>
+
             </div>
         </section>
 
