--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="contact-area">
                 <h1>Contact</h1>
 
-                    <form name="input" method="POST" action="https://formspree.io/rossgoodliffe@gmail.com">
+                    <form action="https://formspree.io/rossgoodliffe@gmail.com" method="POST">
                             <label>First Name</label>
                             <input type="text" name="fname" placeholder="First Name">
                             <label>Surname</label>
