--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <input type="text" name="email" placeholder="Email">
                             <label>Message</label>
                             <input type="textarea" name="message" placeholder="Message">
-                            <input class="contact-button" type="button" type="submit" value="Submit" name="">                    
+                            <input class="contact-button" onclick="contactAlert()" type="button" type="submit" value="Send" name="submitButton">                    
                     </form>
 
             </div>
