--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--Meta tag for form spree-->
+    <meta name="referrer" content="origin" />
 
     <link rel="stylesheet" href="styles/styles.css">
 
@@ -69,7 +71,7 @@
                             <label>Surname</label>
                             <input type="text" name="sname" placeholder="Surname">
                             <label>Email Address</label>
-                            <input type="text" name="email" placeholder="Email">
+                            <input type="text" name="_replyto" placeholder="Email">
                             <label>Message</label>
                             <input type="textarea" name="message" placeholder="Message">
                             <input class="contact-button" onclick="contactAlert()" type="button" type="submit" value="Send" name="submitButton">                    
