changes to form

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <input type="text" name="_replyto" placeholder="Email">
                             <label>Message</label>
                             <input type="textarea" name="message" placeholder="Message">
-                            <input class="contact-button" onclick="contactAlert()" type="button" type="submit" value="Send" name="submitButton">                    
+                            <input class="contact-button" onclick="contactAlert()" type="submit" value="Send">                    
                     </form>
 
             </div>
