--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                             <input type="text" name="_replyto" placeholder="Email">
                             <label>Message</label>
                             <input type="textarea" name="message" placeholder="Message">
-                            <input class="contact-button" type="submit" value="Send" onclick="contactAlert()">                    
+                            <input class="contact-button" type="submit" value="Send" onclick="contactAlert()">
+                            <input type="hidden" name="_next" value="rossgoodliffe.github.io#contact"/>                    
                     </form>
 
             </div>
