styling to about section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="https://github.com/RossGoodliffe"><img src="images/github-64.png" alt="github logo"></a>
                 <a href="#"><img src="images/link1-64.png" alt="github logo"></a>
                 <a href="#"><img src="images/twitter-64.png" alt="github logo"></a>
-                <a href="mailto:rossgoodliffe@gmail.com"><img src="images/email1-64.png" alt="email me"></a>
+                <a href="mailto:rossgoodliffe@gmail.com" target="_blank"><img src="images/email1-64.png" alt="email me"></a>
             </div>
 
         </section>
@@ -40,8 +40,31 @@
         <div class="clr"></div>
 
         <section id="about">
+            <div class="blank-space"></div>
             <h1 id="about-head">About</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et vero nostrum, qui odio eaque!</p>
+                <div class="about-container">
+
+                    <div class="about-main">
+                        <p>I am interested in both front and back end web development and would ideally like a position that allows me to develop my skills in both areas.</p>
+                        <p>Having completed a HND in Computing (Web Technology and Security) I am now currently looking for a Junior Web Developer position.</p>
+                        <p>I enjoy learning new things and keeping up to date with new tech. Other hobbies include playing guitar, gaming and traveling.</p>
+                    </div>
+
+                    <div class="about-sidebar">
+                        <h2>Skills</h2>
+                            <ul>
+                                <li>HTML/CSS</li>
+                                <li>Javascript</li>
+                                <li>PHP</li>
+                                <li>MySQL</li>
+                                <li>Java</li>
+                                <li>Networking</li>
+                            </ul>
+                    </div>
+
+                </div>
+
+                
         </section>
 
         <div class="clr"></div>
