Further styling changes and description added

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </div>
             <div id="social">
                 <a href="https://github.com/RossGoodliffe"><img src="images/github-64.png" alt="github logo"></a>
-                <a href="#"><img src="images/link1-64.png" alt="github logo"></a>
-                <a href="#"><img src="images/twitter-64.png" alt="github logo"></a>
-                <a href="mailto:rossgoodliffe@gmail.com" target="_blank"><img src="images/email1-64.png" alt="email me"></a>
+                <a href="#"><img src="images/link1-64.png" alt="linked in logo"></a>
+                <a href="mailto:rossgoodliffe@gmail.com" target="_blank"><img src="images/email-64.png" alt="email me"></a>
+                <a href="#"><img src="images/pdf-64.png" alt="pdf logo"></a>
             </div>
 
         </section>
@@ -46,7 +46,7 @@
 
                     <div class="about-main">
                         <p>I am interested in both front and back end web development and would ideally like a position that allows me to develop my skills in both areas.</p>
-                        <p>Having completed a HND in Computing (Web Technology and Security) I am now currently looking for a Junior Web Developer position.</p>
+                        <p>Having completed a BcS in Computing (Web Technology and Security) I am now currently looking for a Junior Web Developer position.</p>
                         <p>I enjoy learning new things and keeping up to date with new tech. Other hobbies include playing guitar, gaming and traveling.</p>
                     </div>
 
@@ -59,6 +59,7 @@
                                 <li>MySQL</li>
                                 <li>Java</li>
                                 <li>Networking</li>
+                                <li>Oracle Databases</li>
                             </ul>
                     </div>
 
@@ -71,7 +72,6 @@
 
         <section id="portfolio">
             <h1>Portfolio</h1>
-            <h2></h2>
             <div class="grid-container">
                 
                 <div class="grid-area">
@@ -79,7 +79,7 @@
                         <h3>Northampton News</h3>    
                         <p>This assignment was to take an already build webpage and implement PHP in order to display all the news articles with everything stored in a MySQL database</p>
                     </div>
-                    <a href="#">
+                    <a href="https://github.com/RossGoodliffe/Northampton-News">
                         <div class="grid-link">
                                 <p>view code</p>
                         </div>
@@ -88,9 +88,10 @@
 
                 <div class="grid-area">
                     <div class="grid-content">
-                        <h3>Northampton News</h3>    
-                        <p>This assignment was to take an already build webpage and implement PHP in order to display all the news articles with everything stored in a MySQL database</p>
+                        <h3>TCP & UDP Clients/Servers</h3>    
+                        <p>In this assignment we needed to create TCP & UDP clients/servers that were able to respond to eachother programmed in C# and Java </p>
                     </div>
+
                     <a href="#">
                         <div class="grid-link">
                             <p>view code</p>
@@ -103,7 +104,7 @@
                         <h3>Portfolio</h3>    
                         <p>This assignment was an introduction to HTML & CSS where we needed to build a portfolio page for ourselves</p>
                     </div>
-                    <a href="#">
+                    <a href="https://github.com/RossGoodliffe/csy1018-assign1">
                         <div class="grid-link">
                             <p>view code</p>
                         </div>
@@ -112,10 +113,10 @@
 
                 <div class="grid-area">
                     <div class="grid-content">
-                        <h3>Northampton News</h3>    
-                            <p>This assignment was to take an already build webpage and implement PHP in order to display all the news articles with everything stored in a MySQL database</p>
+                        <h3>Oracle Database</h3>    
+                            <p>In this assignment I was given an ERD and had to write the SQL scripts and table spetifications to create the database to the required spetifications.</p>
                     </div>
-                    <a href="#">
+                    <a href="https://github.com/RossGoodliffe/SQL-assignment">
                         <div class="grid-link">
                             <p>view code</p>
                         </div>
@@ -128,7 +129,8 @@
 
         <div class="clr"></div>
 
-        <section id="contact">
+        <section id="contact">  
+            <div class="blank-space"></div>
             <div class="contact-area">
                 <h1>Contact</h1>
                     <form action="https://formspree.io/rossgoodliffe@gmail.com" method="POST">
