--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="https://github.com/RossGoodliffe"><img src="images/github-64.png" alt="github logo"></a>
                 <a href="#"><img src="images/link1-64.png" alt="linked in logo"></a>
                 <a href="mailto:rossgoodliffe@gmail.com" target="_blank"><img src="images/email-64.png" alt="email me"></a>
-                <a href="#"><img src="images/pdf-64.png" alt="pdf logo"></a>
+                <a href="docs/RossGoodliffe-CV"><img src="images/pdf-64.png" alt="pdf logo"></a>
             </div>
         </section> <!-- End of Home Section-->
 
