--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <p>Junior Web Developer</p>
             </div>
             <div id="social">
-                <a href="https://github.com/RossGoodliffe"><img src="images/github-64.png" alt="github logo"></a>
-                <a href="#"><img src="images/link1-64.png" alt="linked in logo"></a>
+                <a href="https://github.com/RossGoodliffe" target="_blank"><img src="images/github-64.png" alt="github logo"></a>
+                <a href="https://www.linkedin.com/in/ross-goodliffe-89953a14b/" target="_blank"><img src="images/link1-64.png" alt="linked in logo"></a>
                 <a href="mailto:rossgoodliffe@gmail.com" target="_blank"><img src="images/email-64.png" alt="email me"></a>
-                <a href="https://drive.google.com/file/d/119Sprxsq8PLVNtH2bvx2MYrHMtf9qPKf/view?usp=sharing"><img src="images/pdf-64.png" alt="pdf logo"></a>
+                <a href="https://drive.google.com/file/d/119Sprxsq8PLVNtH2bvx2MYrHMtf9qPKf/view?usp=sharing" target="_blank"><img src="images/pdf-64.png" alt="pdf logo"></a>
             </div>
         </section> <!-- End of Home Section-->
 
@@ -75,11 +75,16 @@
                 <div class="grid-area">
                     <div class="grid-content">
                         <h3>Northampton News</h3>    
-                        <p>This assignment was to take an already build webpage and implement PHP in order to display all the news articles with everything stored in a MySQL database</p>
+                        <p>This assignment was to take an already built webpage and implement PHP in order to display all the news articles with everything stored in a MySQL database, none of the HTML/CSS could be changed</p>
                     </div>
                     <a href="https://github.com/RossGoodliffe/Northampton-News">
                         <div class="grid-link">
                                 <p>view code</p>
+                        </div>
+                    </a> 
+                    <a href="https://www.youtube.com/watch?v=d3bvX71D_Ic&t=15s" target="_blank">
+                        <div class="grid-link">
+                                <p>view video demonstration</p>
                         </div>
                     </a>    
                 </div>
@@ -87,7 +92,7 @@
                 <div class="grid-area">
                     <div class="grid-content">
                         <h3>TCP & UDP Clients/Servers</h3>    
-                        <p>In this assignment we needed to create TCP & UDP clients/servers that were able to respond to eachother programmed in C# and Java </p>
+                        <p>In this assignment we needed to create TCP & UDP clients/servers that were able to respond to eachother via the command line programmed in C# and Java </p>
                     </div>
 
                     <a href="https://github.com/RossGoodliffe/TCP-UDP">
@@ -105,6 +110,11 @@
                     <a href="https://github.com/RossGoodliffe/csy1018-assign1">
                         <div class="grid-link">
                             <p>view code</p>
+                        </div>
+                    </a>
+                    <a href="https://rossgoodliffe.github.io/csy1018-assign1/index.html" target="_blank">
+                        <div class="grid-link">
+                                <p>view website</p>
                         </div>
                     </a>    
                 </div>
