minor edits to links

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                         <p>I am interested in both front and back end web development and would ideally like a position that allows me to develop my skills in both areas.</p>
                         <p>Having completed a HND in Computing (Web Technology and Security) I am now currently looking for a Junior Web Developer position.</p>
                         <p>I enjoy learning new things and keeping up to date with new tech. Other hobbies include playing guitar, gaming and traveling.</p>
+                        <br />
+                        <p>If you'd like to get in contact please email me at <a href="mailto:hello@rossgoodliffe.com" target="_blank">hello@rossgoodliffe.com</a></p>
                     </div>
 
                     <div class="about-sidebar">
@@ -83,9 +85,9 @@
                                 <p>view code</p>
                         </div>
                     </a> 
-                    <a href="https://www.youtube.com/watch?v=d3bvX71D_Ic&t=15s" target="_blank">
+                    <a href="http://northamptonnews.rossgoodliffe.com" target="_blank">
                         <div class="grid-link">
-                                <p>view video demonstration</p>
+                                <p>view website</p>
                         </div>
                     </a>    
                 </div>
